tests/ui/simd/intrinsic/generic-comparison.stderr
error[E0511]: invalid monomorphization of `simd_eq` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-comparison.rs:27:9
   |
LL |         simd_eq::<i32, i32>(0, 0);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_ne` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-comparison.rs:29:9
   |
LL |         simd_ne::<i32, i32>(0, 0);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_lt` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-comparison.rs:31:9
   |
LL |         simd_lt::<i32, i32>(0, 0);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_le` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-comparison.rs:33:9
   |
LL |         simd_le::<i32, i32>(0, 0);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_gt` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-comparison.rs:35:9
   |
LL |         simd_gt::<i32, i32>(0, 0);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_ge` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-comparison.rs:37:9
   |
LL |         simd_ge::<i32, i32>(0, 0);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_eq` intrinsic: expected SIMD return type, found non-SIMD `i32`
  --> $DIR/generic-comparison.rs:40:9
   |
LL |         simd_eq::<_, i32>(x, x);
   |         ^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_ne` intrinsic: expected SIMD return type, found non-SIMD `i32`
  --> $DIR/generic-comparison.rs:42:9
   |
LL |         simd_ne::<_, i32>(x, x);
   |         ^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_lt` intrinsic: expected SIMD return type, found non-SIMD `i32`
  --> $DIR/generic-comparison.rs:44:9
   |
LL |         simd_lt::<_, i32>(x, x);
   |         ^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_le` intrinsic: expected SIMD return type, found non-SIMD `i32`
  --> $DIR/generic-comparison.rs:46:9
   |
LL |         simd_le::<_, i32>(x, x);
   |         ^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_gt` intrinsic: expected SIMD return type, found non-SIMD `i32`
  --> $DIR/generic-comparison.rs:48:9
   |
LL |         simd_gt::<_, i32>(x, x);
   |         ^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_ge` intrinsic: expected SIMD return type, found non-SIMD `i32`
  --> $DIR/generic-comparison.rs:50:9
   |
LL |         simd_ge::<_, i32>(x, x);
   |         ^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_eq` intrinsic: expected return type with length 4 (same as input type `i32x4`), found `i16x8` with length 8
  --> $DIR/generic-comparison.rs:53:9
   |
LL |         simd_eq::<_, i16x8>(x, x);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_ne` intrinsic: expected return type with length 4 (same as input type `i32x4`), found `i16x8` with length 8
  --> $DIR/generic-comparison.rs:55:9
   |
LL |         simd_ne::<_, i16x8>(x, x);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_lt` intrinsic: expected return type with length 4 (same as input type `i32x4`), found `i16x8` with length 8
  --> $DIR/generic-comparison.rs:57:9
   |
LL |         simd_lt::<_, i16x8>(x, x);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_le` intrinsic: expected return type with length 4 (same as input type `i32x4`), found `i16x8` with length 8
  --> $DIR/generic-comparison.rs:59:9
   |
LL |         simd_le::<_, i16x8>(x, x);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_gt` intrinsic: expected return type with length 4 (same as input type `i32x4`), found `i16x8` with length 8
  --> $DIR/generic-comparison.rs:61:9
   |
LL |         simd_gt::<_, i16x8>(x, x);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_ge` intrinsic: expected return type with length 4 (same as input type `i32x4`), found `i16x8` with length 8
  --> $DIR/generic-comparison.rs:63:9
   |
LL |         simd_ge::<_, i16x8>(x, x);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 18 previous errors

For more information about this error, try `rustc --explain E0511`.
